[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Tim Anderson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "setupapi", "handleapi", "errhandlingapi", "winerror", "cfgmgr32"]}

#ferris-says = "0.2"
#guid = "0.1.0"
#user32-sys = "0.2.0"


